<resources>
    <string name="app_name">Prod-Activity</string>
    <string name="menu_item_1">Home</string>
    <string name="menu_item_2">Task Lister</string>
    <string name="menu_item_3">Timer</string>
    <string name="menu_item_4">Doodler</string>
    <string name="menu_item_5">Cookie Clicker</string>
    <string name="menu_item_6">Other</string>
    <string name="menu_item_7">Calculator</string>
    <string name="menu_item_8">Lights Out</string>
    <string name="submenu_item_1">Dark/Light Mode</string>
    <string name="submenu_item_2">About</string>
    <string name="submenu_item_3">Reset Data</string>
    <string name="timer_format"> %1$02d:%2$02d:%3$02d </string>
    <string name="welcome_message">Welcome to Prod-activity!</string>
    <string name="welcome_submessage">Choose one of the activities to get started.</string>
</resources>