<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.glen.midtermexam2.MainActivity">
    <item
        android:id="@+id/action_game"
        android:orderInCategory="100"
        android:title="@string/menu_item_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shop"
        android:orderInCategory="100"
        android:title="@string/menu_item_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stats"
        android:orderInCategory="100"
        android:title="@string/menu_item_3"
        app:showAsAction="never" />
    
    <item
        android:orderInCategory="100"
        android:title="@string/menu_item_4"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_mode"
                android:title="Submenu Item 1" />
            <item
                android:id="@+id/action_about"
                android:title="Submenu Item 2" />
        </menu>
    </item>




</menu>